<resources>
    <string name="app_name">CodeHub</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="action_login">Login</string>

    <string name="server_error_hint">server error, please try again later</string>
    <string name="data_load_error_hint">request error, please try again later</string>
    <string name="network_error_hint">request error, please check the network</string>
    <string name="account_error_hint">account authentication failed, please login again</string>


    <string name="icon_star" translatable="false">\uf02a</string>
    <string name="icon_email" translatable="false">\uf03b</string>
    <string name="icon_locate" translatable="false">\uf060</string>
    <string name="icon_company" translatable="false">\uf037</string>
    <string name="icon_blog" translatable="false">\uf05c</string>
    <string name="icon_join" translatable="false">\uf046</string>
    <string name="icon_repo" translatable="false">\uf001</string>
    <string name="icon_push" translatable="false">\uf01f</string>
    <string name="icon_pullRequest" translatable="false">\uf009</string>
    <string name="icon_commit" translatable="false">\uf07e</string>
    <string name="icon_fork" translatable="false">\uf002</string>
    <string name="icon_branch" translatable="false">\uf020</string>
    <string name="icon_organization" translatable="false">\uf037</string>
    <string name="icon_code" translatable="false">\uf05f</string>
    <string name="icon_issue" translatable="false">\uf026</string>
    <string name="icon_tag" translatable="false">\uf015</string>
    <string name="icon_language" translatable="false">\uf0b6</string>
    <string name="icon_add" translatable="false">\uf06b</string>
    <string name="icon_owner" translatable="false">\uf017</string>
    <string name="icon_chevron_right" translatable="false">\uf078</string>
    <string name="icon_readme" translatable="false">\uf011</string>
    <string name="icon_website" translatable="false">\uf007</string>

    <string name="refresh">Refresh</string>
    <string name="data_load_error">error !</string>
    <string name="add_comment">Add Comment</string>
    <string name="issue">Issue</string>

    <string name="star">Star</string>
    <string name="un_star">Unstar</string>

    <!--trending-->
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="all">All</string>
    <string name="c">C</string>
    <string name="cpp">Cpp</string>
    <string name="java">Java</string>
    <string name="javascript">JavaScript</string>
    <string name="objective_c">Objective-C</string>
    <string name="python">Python</string>
    <string name="filter">Filter</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow">follow</string>
    <string name="follow_erroe">Follow Error</string>
    <string name="unfollow_erroe">Unfollow Error</string>
    <string name="follow_success">Follow Success</string>
    <string name="unfollow_success">Unfollow Success</string>
    <string name="star_repo_success">Star Repository Success</string>
    <string name="unstar_repo_success">Unstar Repository Success</string>
    <string name="star_repo_error">Star Repository Error</string>
    <string name="unstar_repo_error">Unstar Repository Error</string>
    <string name="fork_success">Fork Success</string>
    <string name="fork_error">Fork Error</string>
    <string name="data_analysis_error">Unsupport Data</string>
    <string name="update">Upadte  </string>
    <string name="login_error">Login Error</string>
    <string name="not_have_website">Haven\'t Website</string>
    <string name="comment_success">Comment Success</string>
    <string name="pull_loading">Pull Loading</string>
    <string name="loading">Loading</string>
    <string name="user_info_error">User info error, load again</string>
    <string name="login_out_error">Login Out Error</string>
    <string name="logining">Logging in</string>
    <string name="hint">Hint</string>
    <string name="loginout">Logging Out</string>
    <string name="about">About</string>
    <string name="current_version">Current Version</string>
    <string name="follows">Follows</string>
    <string name="following">Following</string>

    <string name="description_search">Search</string>
    <string name="wether_logout">Whether or not logout</string>
    <string name="fork">Fork</string>
    <string name="time">Time</string>
    <string name="logout">Logout</string>
    <string name="repository">Repository</string>
    <string name="event">Event</string>
    <string name="preferences">Preferences</string>
    <string name="version">Version</string>
    <string name="website">Website</string>
    <string name="readme">Readme</string>
    <string name="location">Location</string>
    <string name="email">Email</string>
    <string name="owner">Owner</string>
    <string name="blog">Blog</string>
    <string name="source">Source</string>
    <string name="comment">Comment</string>
    <string name="password_error">username or password is incorrect</string>
    <string name="about_me_github">https://github.com/Caij</string>
    <string name="my_email">worldcaij@gmail.com</string>
    <string name="about_me">About Me</string>
    <string name="page_nothing">There\'s nothing</string>
    <string name="user_info">user_info</string>
    <string name="user_info_avatar">user_info_avatar</string>
    <string name="follow_info_error">follow status erro, load again.</string>
</resources>
