<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:paddingLeft="@dimen/standard_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:layout_marginTop="@dimen/small_margin"
        android:textSize="@dimen/title_text_size"
        android:textColor="@color/color_black"/>

    <RadioGroup
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/small_margin">

        <RadioButton
            android:padding="@dimen/small_small_margin"
            android:id="@+id/daily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily"
            android:checked="true"
            />

        <RadioButton
            android:padding="@dimen/small_small_margin"
            android:id="@+id/weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weekly"
            />

        <RadioButton
            android:padding="@dimen/small_small_margin"
            android:id="@+id/monthly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly"
            />

    </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Languages"
        android:layout_marginTop="@dimen/small_margin"
        android:textSize="@dimen/title_text_size"
        android:textColor="@color/color_black"/>

    <RadioGroup
        android:id="@+id/languages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/small_margin">

        <RadioButton
            android:padding="@dimen/small_small_margin"
            android:id="@+id/all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:checked="true"
            android:singleLine="true"/>

        <RadioButton
            android:padding="@dimen/small_small_margin"
            android:id="@+id/c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c"
            android:singleLine="true"/>

        <RadioButton
            android:padding="@dimen/small_small_margin"
            android:id="@+id/cpp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cpp"
            android:singleLine="true"/>

        <RadioButton
            android:padding="@dimen/small_small_margin"
            android:id="@+id/java"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/java"
            android:singleLine="true"/>

        <RadioButton
            android:padding="@dimen/small_small_margin"
            android:id="@+id/javascript"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/javascript"
            android:singleLine="true"/>

        <RadioButton
            android:padding="@dimen/small_small_margin"
            android:id="@+id/objective_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/objective_c"
            android:singleLine="true"/>

        <RadioButton
            android:padding="@dimen/small_small_margin"
            android:id="@+id/python"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/python"
            android:singleLine="true"/>

    </RadioGroup>
    </LinearLayout>

</LinearLayout>