<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/root_view_bg"
    android:padding="@dimen/small_small_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_small_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/standard_margin">

                <ImageView
                    android:id="@+id/img_user_avatar"
                    android:layout_width="@dimen/user_info_avatar_image"
                    android:layout_height="@dimen/user_info_avatar_image" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/standard_margin"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/big_body_text_size" />

                    <TextView
                        android:id="@+id/tv_user_nickname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_small_margin"
                        android:textSize="@dimen/body_text_size" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_small_margin"
            android:layout_marginLeft="@dimen/small_small_margin"
            android:layout_marginRight="@dimen/small_small_margin"
            android:layout_marginTop="@dimen/small_small_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/standard_margin">

                <LinearLayout
                    android:id="@+id/ll_user_followers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_user_followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/big_body_text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Followers" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_user_repository"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_user_repository"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/big_body_text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Repository" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_user_following"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_user_following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/big_body_text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Following" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_small_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:gravity="center_vertical"
                    android:padding="@dimen/standard_margin">

                    <com.caij.codehub.widgets.GithubTypeFaceTextView
                        android:id="@+id/tv_repository_location_icon"
                        style="@style/TvRepositoryIcon"
                        android:text="@string/icon_locate"
                        android:textSize="@dimen/body_text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/standard_margin"
                        android:text="Location"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/body_text_size" />

                    <TextView
                        android:id="@+id/tv_repository_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:textSize="@dimen/body_text_size" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/standard_margin">

                    <com.caij.codehub.widgets.GithubTypeFaceTextView
                        android:id="@+id/tv_repository_email_icon"
                        style="@style/TvRepositoryIcon"
                        android:text="@string/icon_email"
                        android:textSize="@dimen/body_text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/standard_margin"
                        android:text="Email"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/body_text_size" />

                    <TextView
                        android:id="@+id/tv_repository_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:textSize="@dimen/body_text_size" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_blog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/standard_margin">

                    <com.caij.codehub.widgets.GithubTypeFaceTextView
                        android:id="@+id/tv_repository_blog_icon"
                        style="@style/TvRepositoryIcon"
                        android:text="@string/icon_blog"
                        android:textSize="@dimen/body_text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/standard_margin"
                        android:text="Blog"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/body_text_size" />

                    <TextView
                        android:id="@+id/tv_repository_blog"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:singleLine="true"
                        android:textSize="@dimen/body_text_size" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/standard_margin">

                    <com.caij.codehub.widgets.GithubTypeFaceTextView
                        android:id="@+id/tv_repository_company_icon"
                        style="@style/TvRepositoryIcon"
                        android:text="@string/icon_company"
                        android:textSize="@dimen/body_text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/standard_margin"
                        android:text="Company"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/body_text_size" />

                    <TextView
                        android:id="@+id/tv_repository_company"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:textSize="@dimen/body_text_size" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/standard_margin">

                    <com.caij.codehub.widgets.GithubTypeFaceTextView
                        android:id="@+id/tv_repository_join_icon"
                        style="@style/TvRepositoryIcon"
                        android:text="@string/icon_join"
                        android:textSize="@dimen/body_text_size" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/standard_margin"
                        android:text="Join"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/body_text_size" />

                    <TextView
                        android:id="@+id/tv_repository_join"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:textSize="@dimen/body_text_size" />

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
